--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 	</md-toolbar>
 
 	<md-content class="md-padding" layout="row" layout-wrap>
-		<md-card flex="33">
-			<img src="https://www.pensketruckrental.com/imgs/trucks-large/img_rental_26cargovan.jpg" alt="">
+		<md-card ng-repeat="classified in classifieds"flex="30">
+			<img ng-src="{{classified.image}}" alt="">
 			<md-card-content>
 				<div class="classified-info">
 					<h2 class="md-title">{{classified.title}}</h2>
 					<h3>{{classified.price}}</h3>
-					<p>{{classified.content}}</p>
+					<p>{{classified.description}}</p>
 				</div>
 			</md-card-content>
 		</md-card>
