--- a/index.html
+++ b/index.html
@@ -11,12 +11,54 @@
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<p><strong>ngClassifieds</strong></p>
-			<md-button>
+			<md-button ng-click="openSidebar()">
 				<md-icon class="mdi mdi-plus-circle"></md-icon>
 				New Classified
 			</md-button>
 		</div>
 	</md-toolbar>
+
+
+	<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
+		<md-toolbar>
+			<h1 class="md-toolbar-tools">Add Classified</h1>
+		</md-toolbar>
+		
+		<md-content layout-padding>
+		<form>
+		  <md-input-container>
+		    <label for="title">Title</label>
+		    <input type="text" id="title"
+		           ng-model="vm.classified.title" md-autofocus>
+		  </md-input-container>
+		  <md-input-container>
+		    <label for="price">Price</label>
+		    <input type="text" id="price"
+		         ng-model="vm.classified.price">
+		  </md-input-container>
+		  <md-input-container>
+		    <label for="description">Description</label>
+		    <textarea type="text" id="description"
+		          ng-model="vm.classified.description">
+		    </textarea>
+		  </md-input-container>
+		  <md-input-container>
+		    <label for="image">Image Link</label>
+		    <input type="text" id="image"
+		          ng-model="vm.classified.image">
+		  </md-input-container>
+		  <md-button ng-if="!vm.editing" ng-click="vm.saveClassified(vm.classified)" class="md-primary">
+		    Save
+		  </md-button>
+		  <md-button ng-if="vm.editing" ng-click="vm.saveEdit()" class="md-primary">
+		    Save Edit
+		  </md-button>
+		  <md-button ng-click="closeSidebar()" class="md-warn">
+		    Cancel
+		  </md-button>
+		</form>
+		</md-content>
+	</md-sidenav>
 
 	<md-content class="md-padding" layout="row" layout-align="center" layout-wrap>
 		<md-card ng-repeat="classified in classifieds"flex="30">
@@ -60,5 +102,6 @@
 	<script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 	<script type="text/javascript" src="components/classifieds.ctr.js"></script>
+	<script type="text/javascript" src="components/classifieds.fac.js"></script>
 </body>
 </html>
