Editing existing fields

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
 		  <md-input-container>
 		    <label for="title">Title</label>
 		    <input type="text" id="title"
-		           ng-model="vm.classified.title" md-autofocus>
+		           ng-model="classified.title" md-autofocus>
 		  </md-input-container>
 		  <md-input-container>
 		    <label for="price">Price</label>
 		    <input type="text" id="price"
-		         ng-model="vm.classified.price">
+		         ng-model="classified.price">
 		  </md-input-container>
 		  <md-input-container>
 		    <label for="description">Description</label>
 		    <textarea type="text" id="description"
-		          ng-model="vm.classified.description">
+		          ng-model="classified.description">
 		    </textarea>
 		  </md-input-container>
 		  <md-input-container>
 		    <label for="image">Image Link</label>
 		    <input type="text" id="image"
-		          ng-model="vm.classified.image">
+		          ng-model="classified.image">
 		  </md-input-container>
-		  <md-button ng-if="!vm.editing" ng-click="vm.saveClassified(vm.classified)" class="md-primary">
+		  <md-button ng-if="!vm.editing" ng-click="saveClassified(classified)" class="md-primary">
 		    Save
 		  </md-button>
 		  <md-button ng-if="vm.editing" ng-click="vm.saveEdit()" class="md-primary">
@@ -56,6 +56,7 @@
 		  <md-button ng-click="closeSidebar()" class="md-warn">
 		    Cancel
 		  </md-button>
+		  <pre>{{classified | json}}</pre>
 		</form>
 		</md-content>
 	</md-sidenav>
