--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 		    <input type="text" id="image"
 		          ng-model="classified.image">
 		  </md-input-container>
-		  <md-button ng-if="!vm.editing" ng-click="saveClassified(classified)" class="md-primary">
+		  <md-button ng-if="!editing" ng-click="saveClassified(classified)" class="md-primary">
 		    Save
 		  </md-button>
-		  <md-button ng-if="vm.editing" ng-click="vm.saveEdit()" class="md-primary">
+		  <md-button ng-if="editing" ng-click="saveEdit()" class="md-primary">
 		    Save Edit
 		  </md-button>
 		  <md-button ng-click="closeSidebar()" class="md-warn">
@@ -88,7 +88,7 @@
 				<div class="classified-admin" ng-if="showAdmin">
 					<h3>Admin</h3>
 					<div layout="row">
-						<md-button class="md-primary">Edit</md-button>
+						<md-button ng-click="editClassified(classified)"class="md-primary">Edit</md-button>
 						<md-button class="md-primary">Delete</md-button>
 					</div>
 				</div>
