--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<h3>Admin</h3>
 					<div layout="row">
 						<md-button ng-click="editClassified(classified)"class="md-primary">Edit</md-button>
-						<md-button class="md-primary">Delete</md-button>
+						<md-button ng-click="deleteClassified($event,classified)" class="md-warn">Delete</md-button>
 					</div>
 				</div>
 
