--- a/index.html
+++ b/index.html
@@ -15,8 +15,33 @@
 				<md-icon class="mdi mdi-plus-circle"></md-icon>
 				New Classified
 			</md-button>
+
+			<md-button ng-click="showFilters = true">
+				<md-icon class="mdi mdi-magnify"></md-icon>
+				Filters
+			</md-button>
 		</div>
 	</md-toolbar>
+
+	<div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
+		<md-input-container>
+			<label>Enter Search Term</label>
+			<input type="text" ng-model="classifiedsFilter">
+		</md-input-container>
+		
+		<md-input-container>
+			<label>Category</label>
+			<md-select ng-model="category">
+				<md-option ng-repeat="category in categories" value="{{category}}">{{category}}
+				</md-option>
+			</md-select>
+		</md-input-container>
+
+		<div layout="row">
+			<md-button class="md-warn" ng-click="classifiedsFilter= ''; category ='';">Clear
+			</md-button>
+		</div>
+	</div>
 
 
 	<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
@@ -62,7 +87,7 @@
 	</md-sidenav>
 
 	<md-content class="md-padding" layout="row" layout-align="center" layout-wrap>
-		<md-card ng-repeat="classified in classifieds"flex="30">
+		<md-card ng-repeat="classified in classifieds | filter: classifiedsFilter | filter: category" flex="30">
 			<img ng-src="{{classified.image}}" alt="">
 			<md-card-content>
 				<div class="classified-info" ng-show="!showContact">
@@ -104,5 +129,6 @@
 	<script type="text/javascript" src="scripts/app.js"></script>
 	<script type="text/javascript" src="components/classifieds.ctr.js"></script>
 	<script type="text/javascript" src="components/classifieds.fac.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 </body>
 </html>
