--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	</md-sidenav>
 
 	<md-content class="md-padding" layout="row" layout-align="center" layout-wrap>
-		<md-card ng-repeat="classified in classifieds | filter: classifiedsFilter | filter: category" flex="30">
+		<md-card ng-repeat="classified in classifieds | filter: classifiedsFilter | filter: category" class="classified" flex="30">
 			<img ng-src="{{classified.image}}" alt="">
 			<md-card-content>
 				<div class="classified-info" ng-show="!showContact">
