--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 		</div>
 	</md-toolbar>
 
+
+	<md-button ui-sref="one">go to state one</md-button>
+	<md-button ui-sref="two">go to state two</md-button>
+
+	<ui-view></ui-view>
+
 	<div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
 		<md-input-container>
 			<label>Enter Search Term</label>
@@ -125,6 +131,7 @@
 	<script type="text/javascript" src="node_modules/angular/angular.js"></script>
 	<script type="text/javascript" src="node_modules/angular-animate/angular-animate.js"></script>
 	<script type="text/javascript" src="node_modules/angular-aria/angular-aria.js"></script>
+	<script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 	<script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 	<script type="text/javascript" src="components/classifieds.ctr.js"></script>
